# backend-golang/app/controllers/router.go
@@ -4,10 +4,12 @@ import (
 	"github.com/estebanarivasv/Celer/backend-golang/api/app/controllers/handlers"
 	"github.com/estebanarivasv/Celer/backend-golang/api/app/controllers/handlers/distributor"
 	"github.com/estebanarivasv/Celer/backend-golang/api/app/controllers/handlers/sender"
+	"github.com/estebanarivasv/Celer/backend-golang/api/app/middlewares"
 	"github.com/estebanarivasv/Celer/backend-golang/api/docs"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
+	"strings"
 )
 
 type Router struct {
@@ -30,9 +32,24 @@ func (r *Router) GenerateRouting(server *gin.Engine) {
 	shippingController := handlers.NewShippingController()
 	authController := handlers.NewAuthController()
 
+	authMiddleware := middlewares.NewAuthMiddleware()
+
 	// Create a get method and associate it with the welcome function
 	// ex: localhost/api/v1
 	mainPath := server.Group(docs.SwaggerInfo.BasePath)
+
+	// Middleware applied to all routes within mainPath, except authPath
+	mainPath.Use(func(c *gin.Context) {
+		// Check if the current route is in authPath
+		if !strings.Contains(c.FullPath(), "/auth") {
+			// Perform middleware logic here only for routes outside authPath
+			authMiddleware.UseMiddleware(c)
+		}
+
+		// Call Next() to pass the request to the next middleware or controller
+		c.Next()
+	})
+
 	{
 		authPath := mainPath.Group("/auth")
 		{
@@ -74,8 +91,6 @@ func (r *Router) GenerateRouting(server *gin.Engine) {
 		}
 		mainPath.GET("/shippings/:id/state", shippingController.GetShippingStateByID)
 
-		//mainPath.GET("/users/:id", handlers.GetUserByID)
-
 		mainPath.POST("/packages", packageController.NewPackage)
 		mainPath.DELETE("/packages/:id", packageController.DeletePackageByID)
 
@@ -85,3 +100,7 @@ func (r *Router) GenerateRouting(server *gin.Engine) {
 	// Append swagger middleware
 	server.GET("/docs/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 }
+
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
